fix some major spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ h3 {
 }
 
 .img-responsive {
-  width:100%;
+  width:100%
   margin:auto;
 }
 
@@ -47,26 +47,6 @@ p {
   color:#ccffff;
 }
 
-.question2 {
-  display:none;
-}
-
-.question3 {
-  display:none;
-}
-
-.question4 {
-  display:none;
-}
-
-.question5 {
-  display:none
-}
-
-.question6 {
-  display:none;
-}
-
-.vacationResult {
+.questions {
   display:none;
 }
